# Utilities

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindNetCDF.cmake
demo/Containers/: main.cpp
demo/IO/: main.cpp
demo/ReadParams/: main.cpp  parametersTest.txt
include/Containers/: Scalar1D.h  Scalar1D.it.h  Scalar2D.h  Scalar2D.it.h  Scalar3D.h  Scalar3D.it.h
include/IO/: ioNetCDF.h
include/ReadParams/: ReadParams.h
include/math/: MathOps.h
scripts/: build.sh
src/IO/: ioNetCDF.cpp
src/ReadParams/: ReadParams.cpp
src/math/: MathOps.cpp
